@startuml

package App-Scene [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.tscn]] {
    class App  {
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs ScriptFile]]
        [Provisions]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:32 IAppRepo]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs Script]]
        --
        [Nodes]
        Menu - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/Menu.cs Script]]
        Splash - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/splash/Splash.cs Script]]
        [Properties]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:50 AnimationPlayer]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:41 AppBinding]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:39 AppLogic]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/state/states/SplashScreen.cs Script]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:38 AppRepo]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs Script]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:49 BlankScreen]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:25 Game]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs Script]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:48 GamePreview]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:26 Instantiator]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/utils/Instantiator.cs Script]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:47 Menu]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/Menu.cs Script]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:51 Splash]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/splash/Splash.cs Script]]
        --
        [Methods]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:15 _Notification()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:150 FadeInFromBlack()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:156 FadeToBlack()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:162 HideMenus()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:55 Initialize()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:134 OnAnimationFinished()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:168 OnEnterTree()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:170 OnExitTree()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:132 OnLoadGame()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:130 OnNewGame()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:73 OnReady()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/App.cs:182 OnSaveFileLoaded()]]
    }
    class Menu  {
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/Menu.cs ScriptFile]]
        [Properties]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/Menu.cs:22 LoadGameButton]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/Menu.cs:20 NewGameButton]]
        --
        [Methods]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/Menu.cs:17 _Notification()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/Menu.cs:39 OnExitTree()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/Menu.cs:46 OnLoadGamePressed()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/Menu.cs:45 OnNewGamePressed()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/Menu.cs:33 OnReady()]]
    }
    class Splash  {
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/splash/Splash.cs ScriptFile]]
        [Dependencies]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/splash/Splash.cs:21 AppRepo]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs Script]]
        --
        [Properties]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/splash/Splash.cs:16 AnimationPlayer]]
        --
        [Methods]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/splash/Splash.cs:34 _Input()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/splash/Splash.cs:13 _Notification()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/splash/Splash.cs:31 OnAnimationFinished()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/splash/Splash.cs:28 OnExitTree()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/menu/splash/Splash.cs:25 OnReady()]]
    }
    class AppRepo  {
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs ScriptFile]]
        [Interface Methods]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs:58 OnEnterGame()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs:59 OnExitGame()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs:56 OnMainMenuEntered()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs:54 SkipSplashScreen()]]
        [Methods]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs:63 Dispose()]]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs:80 Dispose()]]
    }
    package FarmingGame-Scene [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.tscn]] {
        class FarmingGame  {
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs ScriptFile]]
            [Dependencies]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:61 AppRepo]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs Script]]
            [Provisions]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:52 IGameRepo]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs Script]]
            --
            [Nodes]
            Player - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs Script]]
            [Properties]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:30 EntityTable]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:55 GameBinding]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:33 GameChunk]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:53 GameLogic]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/state/states/Won.cs Script]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:40 GameRepo]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs Script]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:46 Player]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs Script]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:32 SaveFile]]
            --
            [Interface Methods]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:84 LoadExistingGame()]]
            [Methods]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:23 _Notification()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:90 FinishedLoadingSaveFile()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:73 OnResolved()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/game/FarmingGame.cs:65 Setup()]]
        }
        class Player2D  {
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs ScriptFile]]
            [Dependencies]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:44 GameRepo]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs Script]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:47 AppRepo]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/app/domain/AppRepo.cs Script]]
            [Provisions]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:55 IPlayer2DLogic]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/state/states/Player2DLogic.State.Alive.cs Script]]
            --
            [Interface Properties]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:63 Player2DLogic]] - [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/state/states/Player2DLogic.State.Alive.cs Script]]
            [Properties]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:37 AnimatedSprite]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:28 MoveSpeed]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:67 PlayerBinding]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:65 Settings]]
            --
            [Interface Methods]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:130 GetGlobalInputVector()]]
            [Methods]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:24 _Notification()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:87 OnExitTree()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:122 OnPhysicsProcess()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:85 OnReady()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:93 OnResolved()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/farming_rpg/player/Player2D.cs:71 Setup()]]
        }
        class GameRepo  {
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs ScriptFile]]
            [Constructors]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:124 GameRepo]]()
            [Interface Properties]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:106 CameraBasis]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:109 GlobalCameraDirection]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:99 IsMouseCaptured]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:101 IsPaused]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:113 NumCoinsAtStart]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:111 NumCoinsCollected]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:103 PlayerGlobalPosition]]
            --
            [Interface Methods]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:167 OnFinishCoinCollection()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:183 OnGameEnded()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:181 OnJump()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:202 OnJumpshroomUsed()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:190 Pause()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:196 Resume()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:157 SetCameraBasis()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:154 SetIsMouseCaptured()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:204 SetNumCoinsAtStart()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:207 SetNumCoinsCollected()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:151 SetPlayerGlobalPosition()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:160 StartCoinCollection()]]
            [Methods]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:212 Dispose()]]
            [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/game/domain/GameRepo.cs:230 Dispose()]]
        }
        FarmingGame::Player ---> Player2D
        FarmingGame::GameRepo ---> GameRepo
    }
    class Instantiator  {
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/utils/Instantiator.cs ScriptFile]]
        [Interface Properties]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/utils/Instantiator.cs:27 SceneTree]]
        --
        [Interface Methods]
        [[vscode://file/F:/BHamAndEggs/learning-projects/GameDemo/src/utils/Instantiator.cs:34 LoadAndInstantiate()]]
    }
    App::Menu ---> Menu
    App::Splash ---> Splash
    App::AppRepo ---> AppRepo
    App::FarmingGame ---> FarmingGame
    App::Instantiator ---> Instantiator
}

@enduml